--- a/references.bib
+++ b/references.bib
@@ -46,3 +46,10 @@
   publisher={Boom},
   address={Amsterdam}
 }
+@article{Mensink2024,
+  title={Enhaning efficiency and flexibility in Audits through {B}ayesian optional stopping},
+  author={Mensink, Lotte and {de Swart}, Jacques and Derks, Koen and Wetzels, Ruud},
+  year={2024}, 
+  journal={PsyArXiv Preprints},
+  url={https://doi.org/10.31234/osf.io/axwvu}
+}
