--- a/chap-howto-sampling.qmd
+++ b/chap-howto-sampling.qmd
@@ -71,7 +71,7 @@ Let's explore an example on how to perform Bayesian optional stopping in JASP. T
 
 First, you are going to select the maximum sample that you can afford to check based on your resources. Note that it is unlikely that you will need to check the entire sample. To select the sample, use the 'Selection' analysis from the 'Audit Sampling' menu. 
 
-![](img/bos/bos-1.png){fig-align="center" width=75%}
+![](img/howto/sampling/howto-6.png){fig-align="center" width=75%}
 
 The following settings are required: 
 
@@ -95,15 +95,15 @@ After applying these settings, you should find the resulting .csv file saved on 
 
 Now, you can start filling in the audit values that correspond to the bookvalues selected in your sample. Load the exported sample file by navigating to 'File' > 'Open' and selecting the .csv file you saved on your computer. This should look as follows: 
 
-![](img/bos/bos-2.png){fig-align="center" width=75%}
+![](img/howto/sampling/howto-7.png){fig-align="center" width=75%}
 
 The data shows all the selected transactions in the sample, including their row numbers, IDs and bookvalues. The column for auditResult is still empty. This column is to be filled by the auditor. To start filling in this column, you can click on 'Edit Data'. This brings you into the following panel. 
 
-![](img/bos/bos-3.png){fig-align="center" width=75%}
+![](img/howto/sampling/howto-8.png){fig-align="center" width=75%}
 
 In this panel, you can manually fill in the correct audit value. Bayesian optional stopping allows you to decide, at any moment, whether to continue or stop filling in correct audit values. To make this decision, you can use the 'Bayesian Evaluation' section:
 
-![](img/bos/bos-4.png){fig-align="center" width=75%}
+![](img/howto/sampling/howto-9.png){fig-align="center" width=75%}
 
 The following settings are required: 
 
@@ -115,7 +115,7 @@ The following settings are required:
 
 Furthermore, the prior needs to be specified:
 
-![](img/bos/bos-5.png){fig-align="center" width=75%}
+![](img/howto/sampling/howto-10.png){fig-align="center" width=75%}
 
 - **Impartial prior:** Select the impartial prior as a prior for the evaluation by expanding the 'Prior' section and selecting 'Impartial' under 'Elicitation method'. 
 
@@ -123,7 +123,7 @@ Furthermore, the prior needs to be specified:
 
 Finally, we want the output to show the sequantial analysis plot: 
 
-![](img/bos/bos-6.png){fig-align="center" width=75%}
+![](img/howto/sampling/howto-11.png){fig-align="center" width=75%}
 
 **Sequential analysis:** Expand the 'Report' section and select the checkbox for sequential analysis. This will produce a figure showing the Bayes factor as a function of the sample size in the output.
 
@@ -131,11 +131,11 @@ Finally, we want the output to show the sequantial analysis plot:
 
 The output shows the results of the audit values you have filled out so far. Hence, we see that the sample size is 2, and no misstatements were found in this sample. The Bayes factor provides an indication of the amount of evidence has been observed. A $BF_{-+}$ of 1.194 indicates that the data are 1.194 times more likely under $H_-$ (the misstatement in the population is lower than the performance materiality) than under $H_+$ (the misstatement in the population is higher than the performance materiality). 
 
-![](img/bos/bos-7.png){fig-align="center" width=40%}
+![](img/howto/sampling/howto-12.png){fig-align="center" width=40%}
 
 Furthermore, the output shows a figure that depicts the Bayes factor ($BF_{-+}$) as a function of the sample size ($n$). This figure illustrates how the evidence for the hypothesis $H_-$ versus the hypothesis $H_+$ accumulates. Here, we see that over the course of the small sample that we have collected, the Bayes factor has increased slightly. 
 
-![](img/bos/bos-8.png){fig-align="center" width=75%}
+![](img/howto/sampling/howto-13.png){fig-align="center" width=75%}
 
 Based on the output of the Bayesian evaluation, you can decide whether you want to continue or terminate data collection. @Mensink2024 describe an approach to formulate Bayes factor thresholds for terminating data collection. For example, if you use an impartial prior and your allowable risk of incorrect acceptance is 5\%, this leads to a Bayes factor threshold of 19. As soon as the Bayes factor exceeds 19, you can approve the population of book values, with no more than 5\% risk that this conclusion is incorrect. As this threshold is not yet reached for our example, we need to continue data collection. 
 
@@ -143,10 +143,8 @@ To continue data collection, go back to the 'Edit Data' menu, check more items a
 
 In this example, after checking 45 book values that were selected in the sample and filling in their corresponding audit values (all were correct, except for the 13th invoice which contained a small taint) the output looks as follows.  
 
-![](img/bos/bos-9.png){fig-align="center" width=40%}
+![](img/howto/sampling/howto-14.png){fig-align="center" width=40%}
 
-![](img/bos/bos-10.png){fig-align="center" width=75%}
+![](img/howto/sampling/howto-15.png){fig-align="center" width=75%}
 
 The Bayes factor is higher than 19, which means we can approve the population of book values with no more than 5\% risk that this conclusion is incorrect. 
-
-
