Chapter fairness workflow

--- a/chap-fairness.qmd
+++ b/chap-fairness.qmd
@@ -12,7 +12,7 @@ Let's explore an example of an evaluation analysis. To follow along, open the 'F
 
 ![](img/fairness-evaluation/fairness-evaluation-1.png){fig-align="center" width=100%}
 
-This will open a dataset with 6172 rows and seven columns: 'TwoYrRecidivism', 'AgeAboveFoutryFive', 'AgeBelowTwentyFive', 'Gender', 'Misdemeanor', 'Ethnicity', 'Predicted'. The 'TwoYrRecidivism' column indicates whether the offender committed a crime within two years of being released and, therefore, provides the ground truth information on the offenders' recidivism. The 'AgeAboveFoutryFive' and 'AgeAboveFoutryFive' columns indicate whether the offender is over the age of 45 and whether the offender is under the age of 25, respectively. The 'Gender' column indicates whether the offender is a female or a male. The 'Misdemeanor' column indicates whether the crime commited is a misdemeanor (i.e., a minor wrongdoing, less serious than a felony). The 'Ethnicity' column indicates the offender's ethnicity (African-American, Asian, Caucasian, Hispanic, Native American, or Other). The 'Predicted' column indicates whether the COMPAS algorithm classifies the offender as low or high risk of committing another crime after being released. In this scenario, we seek to determine, with 95% confidence, whether the COMPAS algorithm discriminates against offenders based on their ethnicity.
+This will open a dataset with 6172 rows and seven columns: 'TwoYrRecidivism', 'AgeAboveFoutryFive', 'AgeBelowTwentyFive', 'Gender', 'Misdemeanor', 'Ethnicity', 'Predicted'. The 'TwoYrRecidivism' column indicates whether the offender committed a crime within two years of being released and, therefore, provides the ground truth information on the offenders' recidivism. The 'AgeAboveFoutryFive' and 'AgeAboveFoutryFive' columns indicate whether the offender is over the age of 45 and whether the offender is under the age of 25, respectively. The 'Gender' column indicates whether the offender is a female or a male. The 'Misdemeanor' column indicates whether the crime commited is a misdemeanor (i.e., a minor wrongdoing, less serious than a felony). The 'Ethnicity' column indicates the offender's ethnicity (African-American, Asian, Caucasian, Hispanic, Native American, or Other). The 'Predicted' column indicates whether the COMPAS algorithm classifies the offender as low or high risk of committing another crime after being released. This is the focus of the audit—that is, where we aim to detect any potential unfairness. In this scenario, we seek to determine, with 95% confidence, whether the COMPAS algorithm discriminates against offenders based on their ethnicity.
 
 ![](img/fairness-evaluation/fairness-evaluation-2.png){fig-align="center" width=100%}
 
@@ -25,9 +25,9 @@ To evaluate the fairness of the COMPAS algorithm's prediction, we open the 'Eval
 These are the main settings for the analysis: 
 
 - **Variables:** Begin by entering the variable that contains the true recidivism values of the offenders into the 'Ground Truth Information' field. Then, input the variables that hold the predicted recidivism values and the offenders' ethnicity into their respective fields. 
-- **Confidence:** Specify the confidence level for your analysis. This level, which complements the significance level, dictates when to reject the null hypothesis and the amount of work needed to approve the fairness of the algorigm. A higher confidence level requires more audit evidence to conclude that the algorithm is not discriminating against certain social groups. In this example, we use a confidence level of 95%.
+- **Confidence:** Specify the confidence level for your analysis. This level, which complements the significance level, dictates when to reject the null hypothesis and the amount of work needed to approve the fairness of the algorithm. A higher confidence level requires more audit evidence to conclude that the algorithm is not discriminating against certain social groups. In this example, we use a confidence level of 95%.
 - **Fairness measure:** Specify the fairness measure for your analysis. The possible options are: 'Predictive rate parity', 'Negative predictive rate parity', 'False positive rate parity', 'False negative rate parity', 'Equal opportunity, 'Specificity parity', 'Disparate impact', 'Equalized odds', 'Accuracy parity'. It is possible to be guided in choosing the most suitable fairness measure for your dataset by using the decision workflow provided in the 'Fairness Workflow' analysis within the section 'Algorithm Auditing' within the Audit module. In this example, we use the 'False positive rate parity' as fairness measure.
-- **Levels: Privileged group:**Select which group, identified by the sensitive attribute's values, is the privileged one (i.e., which group is advataged by the algorithm's outcome). In this example, the privileged group is the Caucasian one.
+- **Levels: Privileged group:**Select which group, identified by the sensitive attribute's values, is the privileged one (i.e., which group is advantaged by the algorithm's outcome). In this example, the privileged group is the Caucasian one.
 - **Levels: Positive class:**Select which class of the algorithm’s predictions is the favorable outcome. This refers to the outcome that is beneficial to those who receive it. In this example, the positive class is the 'yes' classification.
 - **Alt. Hypothesis:**Choose whether to calculate a two-sided test or a one-sided test to evaluate the algorithm's fairness. In this example, we select the option 'Unprivileged ≠ privileged'. 
 - **Display: Explanatory text:** Finally, select whether to show explanatory text in the output.
